--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "@woocommerce/woocommerce-rest-api": "^1.0.2",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.542.0",
