--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
+    "resend": "^6.5.2",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
